improve bike tower 10 review

--- a/source/cycle/articles/2013-12-14-bike-tower-10.html.md
+++ b/source/cycle/articles/2013-12-14-bike-tower-10.html.md
@@ -14,13 +14,18 @@ MINOURAの縦置きバイクスタンド、
 
 それから約一年、だいぶ利用したのでレビューしたいと思います。
 
+## 見た目
+実際に家で二台設置したらこんな感じです。
+
+<a href="http://www.flickr.com/photos/uskanda/11367123433/" title="IMG_8454.JPG by uskanda, on Flickr"><img src="http://farm4.staticflickr.com/3708/11367123433_ca9a50f254_b.jpg" width="683" height="1024" alt="IMG_8454.JPG"></a>
+
+ふつうに立てかけておくのに比べて、ある程度高い位置におかれるので、
+非常に綺麗に見えます。ディスプレイとしての自転車の価値をすごく高めてくれます。
+愛車でニヤニヤしたいひとにもおすすめ。
 
 ## スペースの利用
 普通に二台置くよりはかなり省スペースで済むようになります。
 自転車の高さは自由にコントロールできます。
-実際に家で二台設置したらこんな感じです。
-
-<a href="http://www.flickr.com/photos/uskanda/11367123433/" title="IMG_8454.JPG by uskanda, on Flickr"><img src="http://farm4.staticflickr.com/3708/11367123433_ca9a50f254_b.jpg" width="683" height="1024" alt="IMG_8454.JPG"></a>
 
 ### 天井の高さ
 2mあればなんとか二台おけると思います。
@@ -30,10 +35,13 @@ MINOURAの縦置きバイクスタンド、
 ### 通路への設置 - 通路の効率利用
 利用中、一度引っ越しをしましたが、
 引越し前はワンルームの部屋の玄関前通路に設置していました。
-奥行きは40cmほどあればロードバイクは設置できるし、
-一台限定にして、高いところにバイクをかけるようにすればハンドルが邪魔にならなくなるので、
-30cm弱のスペースがあればなんとかできます。
-ちょっと広めの通路があれば、ワンルームでのバイク補完ができるようになります。
+このときは自転車一台だったのですが、通路にそのままおくと非常に邪魔でした。
+
+バイクタワーを一台利用にして、高いところにバイクをかけるようにすればハンドルが邪魔にならなくなるので、
+25〜30cm弱の幅しか使わなくなります。ハンドル込みだと40cm強、ふつうのロードバイクの幅といっしょです。
+
+ですので、ちょっと広めの通路があれば、ワンルームでのバイク保管ができるようになります。
+たま〜に玄関を開けて家に入ろうとするとタイヤがぶつかってきますが(^_^;)
 
 <a href="http://www.flickr.com/photos/uskanda/11367458833/" title="IMG_8460.JPG by uskanda, on Flickr"><img src="http://farm4.staticflickr.com/3700/11367458833_5c217f828c.jpg" width="333" height="500" alt="IMG_8460.JPG"></a>
 
